--- a/styles/coffee-info.css
+++ b/styles/coffee-info.css
@@ -166,8 +166,8 @@ main {
 }
 
 .comments-section input[type="submit"] {
-  float: right;
-  display: inline-block;
+  display: block;
+  margin: 0 0 0 auto;
   border: none;
   padding: 6px 15px;
   cursor: pointer;
@@ -183,10 +183,10 @@ main {
 .comment {
   background-color: white;
   border-radius: var(--main-border-radius);
-  float: left;
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
+  display: flex;
 }
 
 .comment-info, .comment-text{
@@ -195,8 +195,7 @@ main {
 }
 
 .comment-info {
-  width: 20%;
-  float: left;
+  width: 30%;
   box-sizing: border-box;
 }
 
@@ -205,8 +204,7 @@ main {
 }
 
 .comment-text {
-  width: 80%;
-  float: left;
+  width: 70%;
   box-sizing: border-box;
 }
 
@@ -320,7 +318,6 @@ main {
 
     .comment-info {
       width: 40%;
-      float: left;
       box-sizing: border-box;
     }
 
@@ -330,7 +327,6 @@ main {
 
     .comment-text {
       width: 60%;
-      float: left;
       box-sizing: border-box;
     }
 }
