--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ textarea {
 
 main {
   min-height: calc(100vh - 60px);
-  padding-top: 68px;
+  padding-top: 65px;
   padding-bottom: 50px;
   box-sizing: border-box;
 }
@@ -65,12 +65,6 @@ h1 i {
   display: none;
 }
 
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 a {
   color: white;
   text-decoration: none;
@@ -90,21 +84,22 @@ header {
   color: white;
   padding: 15px 50px;
   min-width: 650px;
+  display: flex;
 }
 
 header .header-left-title {
-  float: left;
+  display: block;
+  margin: 0 auto 0 0;
 }
 
 header .header-search {
-  float: right;
-  padding-top: 3px;
+  display: block;
+  margin: 0 0 0 auto;
   height: 100%;
   box-sizing: border-box;
 }
 
 header .header-search input {
-  float: right;
   box-sizing: border-box;
   height: 35px;
   width: 200px;
@@ -114,7 +109,6 @@ header .header-search input {
 }
 
 header .header-search button {
-  float: right;
   margin-left: 20px;
   width: 35px;
   height: 35px;
@@ -240,12 +234,10 @@ footer .contacts {
 footer .contacts a {
   color: white;
   display: inline-block;
-  float: right;
-  margin-left: 20px;
+  margin-left: 15px;
   width: 40px;
   height: 40px;
   border-radius: 15%;
-  border: none;
   font-size: 1.8em;
   padding-top: 1.5px;
   box-sizing: border-box;
